--- a/src/app/page.css
+++ b/src/app/page.css
@@ -75,6 +75,9 @@ html {
   scroll-behavior:smooth;
 }
 
+.red {
+  color: var(--main-red);
+}
 body{
   font-family: 'Inter', sans-serif;
   color: var(--main-black);
@@ -248,6 +251,7 @@ aside#menu-secundario {
   padding-left: 4vw;
   padding-right: 4vw;
   padding-bottom: 2vh;
+  font-size: 0.8rem;
 }
 .navbar nav a {
   display: block;
@@ -479,6 +483,7 @@ h1 {
   font-size: 8vw;
   font-weight: 700;
   line-height: 0.9;
+  color: var(--main-red);
 }
 .hp-hero__ib-wrap {
   flex-direction: column;
@@ -579,7 +584,7 @@ h1 {
   align-content: center;  
 }
 .middle-section__heading {
-  font-size: 2.5vw;
+  font-size: 4vw;
   font-weight: 700;
   line-height: 1em;
   margin-bottom: 2rem;
@@ -753,8 +758,7 @@ h1 {
 
 
 .case_study__text-wrap {
-  grid-area: span 1 / span 1 / span 1 / span 1;
-  max-width: 30rem;
+  max-width: 25rem;
   min-width: 10rem;
   display: flex;
   flex-direction: column;
@@ -765,15 +769,11 @@ h1 {
   grid-area: span 2 / span 1 / span 2 / span 1;
 }
 .case-study__item-grid {
-  grid-column-gap: 6vw;
-  grid-row-gap: 8vw;
-  grid-template-rows: auto 8vw;
-  grid-template-columns: 1fr 1fr;
-  grid-auto-columns: 1fr;
   justify-items: center;
   margin-bottom: 4rem;
-  display: grid;
+  display: flex;
   position: relative;
+  column-gap: 3rem;
 }
 
 
@@ -793,7 +793,6 @@ h1 {
   font-weight: 400;
 }
 .case_study__image-wrap {
-  border-radius: 50px;
   overflow: hidden;
   max-width: 100%;
 }
@@ -835,17 +834,7 @@ h1 {
 .details-button-icon-wrap {
   width: 1.3rem;
 }
-.slider-mask {
-  z-index: 1;
-  height: 100%;
-  white-space: nowrap;
-  display: block;
-  position: relative;
-  left: 0;
-  right: 0;
-  overflow: hidden;
-  border-radius: 50px;
-}
+
 
 .slider-mask .indicators {
   position: absolute;
@@ -907,7 +896,7 @@ h1 {
   display: grid;
 }
 .section.contact {
-  padding-bottom: 24vh;
+  padding-bottom: 28vh;
 }
 .contact_container {
   display: flex;
@@ -952,12 +941,12 @@ h1 {
   height: 100vh;
 }
 .project-heading {
-  font-size: 4rem;
+  font-size: 2.8rem;
   line-height: 1em;
 }
 
 .proj-heading-container {
-  margin-top: 10rem;
+  margin-top: 3rem;
   display: flex;
   column-gap: 2rem;
   align-items: flex-start;
@@ -965,8 +954,10 @@ h1 {
   max-width: 50%;
 }
 .swiper-pagination {
-  bottom: 25px;
+  text-align: right!important;
+  padding: 1rem;
 }
+
 @media screen and (max-width: 1501px){ 
   .hp-hero__skills-wrap {
     grid-template-columns: 1fr;
@@ -980,7 +971,7 @@ h1 {
     max-width: 100%;
   }
   .project-heading {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
   .section.hp-hero {
     padding-top: 18vh;
@@ -1000,7 +991,7 @@ h1 {
     font-size: 19vw;
   }
   h2.hp-hero__ib, h2.middle-section__heading {
-    font-size: 7vw;
+    font-size: 9vw;
   }
   .hp-hero__heading-grid, .grid-plans {
     grid-template-columns: 1fr;
@@ -1027,7 +1018,11 @@ h1 {
     display: block;
     max-width: 100%;
   }
-  .case-study__item-grid, .solutions-section-grid, .reasons-section-grid, .sobre-mi__content-grid {
+  .case-study__item-grid {
+    flex-direction: column;
+    row-gap: 2rem;
+  }
+   .solutions-section-grid, .reasons-section-grid, .sobre-mi__content-grid {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     grid-row-gap: 3rem;
